# claude-code-notify

./: .env.example  README.md  notify_claude.sh  pyproject.toml  slack_notifier.py
src/claude_code_notify/: config.py  main.py  notifier.py
