[project]
name = "claude-code-notify"
version = "0.1.0"
description = "Claude Code 작업 완료 또는 입력 대기 시 Slack DM으로 알림을 보내는 유틸리티"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
claude-code-notify = "claude_code_notify.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
